<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        />
    <RelativeLayout
        android:id="@+id/layout_amount"
        android:layout_below="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        >
        <EditText
            android:id="@+id/edit_sub_amount"
            android:inputType="number"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:maxLength="2"
            android:gravity="left|bottom"
            android:text="@string/zero"
            android:textSize="18dp"
            />
        <TextView
            android:id="@+id/text_amount_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/edit_sub_amount"
            android:layout_alignBottom="@+id/edit_sub_amount"
            android:textSize="18dp"
            android:text="@string/dot"
            />
        <EditText
            android:id="@+id/edit_amount"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/text_amount_dot"
            android:layout_alignBottom="@+id/edit_sub_amount"
            android:maxLength="6"
            android:gravity="right|bottom"
            android:text="@string/zero"
            android:textSize="18dp"
        ><requestFocus /></EditText>
    </RelativeLayout>
    <TextView
        android:id="@+id/textView2"
        android:layout_below="@+id/layout_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" 
        />
    <EditText
        android:id="@+id/edit_name"
        android:inputType="text"
        android:layout_below="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    
    <TextView
        android:id="@+id/textView3"
        android:layout_below="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        />
    <RadioGroup
        android:id="@+id/radio_type_group"
        android:layout_below="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/type_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"
            />
        <RadioButton
            android:id="@+id/type_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense"
            android:checked="true" 
            />
    </RadioGroup>
    
</RelativeLayout>
